--- a/style.css
+++ b/style.css
@@ -34,3 +34,26 @@ body {
     font-size: 1.5rem;
     margin-bottom: 2.5%;
 }
+
+#headerFont {
+    font-family: 'Poiret One', cursive;
+    font-size: 7rem;
+    color: white;
+    text-shadow: 1px 3px 0 #666666, 1px 13px 5px #666666;
+}
+
+#headerContainer {
+    margin-top: 4rem;
+}
+
+.page-footer {
+    background-color: rgb(245, 193, 191);
+}
+
+iframe {
+    margin-top: 10%;
+}
+
+.fb-like {
+    filter: hue-rotate(320deg);
+}
