--- a/style.css
+++ b/style.css
@@ -43,12 +43,21 @@ body {
 }
 
 #headerContainer {
-    margin-top: 4rem;
+    margin-top: 2rem;
     margin-bottom: 7rem;
 }
 
 #mainBody {
-    margin-bottom: 10rem;
+    margin-bottom: none;
+    background-color: rgba(12, 12, 12, 0.26);
+}
+
+#churchPic {
+    width: 100%;
+    border-radius: 10px;
+    border: 4px solid rgba(245, 193, 191, 0.733);
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 #mainFont {
@@ -59,6 +68,15 @@ body {
     border-radius: 5px;
     border: 2px solid rgba(245, 193, 191, 0.733);
 }
+
+#secMainBod{
+    margin-bottom: 25rem;
+    padding: 4rem;
+    background-color: rgba(255, 255, 255, 0.842);
+    color: rgb(83, 142, 179);
+    font-family: monospace;
+}
+
 .page-footer {
     background-color: rgba(245, 193, 191, 0.733);
 }
