--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     margin-bottom: none;
     padding: 3rem;
     border-top: 1px solid rgb(0, 255, 242);
-    background-color: rgba(80, 80, 80, 0.219);
+    background-color: rgba(148, 147, 147, 0.603);
     transform: skewY(3deg);
 }
 
@@ -63,7 +63,7 @@ body {
     width: 100%;
     border-radius: 10px;
     border: 2px solid rgb(255, 175, 173);
-    box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75);
+    /* box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75); */
     margin-top: 4rem;
     margin-bottom: 4rem;
 }
@@ -72,6 +72,12 @@ body {
     font-family: 'Poiret One', cursive;
     color: black;
     padding: 3rem;
+}
+
+#mainFont2 {
+    font-family: 'Poiret One', cursive;
+    font-size: 3rem;
+    color: black;
 }
 
 #secMainBod{
@@ -90,6 +96,9 @@ body {
 
 #aboutUsCont {
     background-color: rgba(165, 178, 190, 0.952);
+    padding-right: 3rem;
+    padding-left: 3rem;
+    padding-bottom: 3rem;
 }
 
 .page-footer {
