--- a/style2.css
+++ b/style2.css
@@ -3,7 +3,7 @@ body {
     width: 100%;
     height: 100%;
     margin: auto;
-    overflow: scroll;
+    /* overflow: scroll; */
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -36,6 +36,7 @@ body {
 }
 
 #headerFont {
+    margin-bottom: 5rem;
     font-family: 'Poiret One', cursive;
     font-size: 7rem;
     color: white;
@@ -49,11 +50,9 @@ body {
 
 #mainBody {
     margin-bottom: none;
-    /* padding: 1rem; */
-    border-top: 2px solid rgb(0, 225, 255);
-    /* border-bottom: 3px solid black; */
-    background: linear-gradient(90deg, rgb(173, 229, 245) 20%, rgb(250, 207, 210) 80%);
-    /* background-color: rgb(226, 225, 225); */
+    padding: 3rem;
+    border-top: 1px solid rgb(0, 255, 242);
+    background-color: rgba(148, 147, 147, 0.603);
     transform: skewY(3deg);
 }
 
@@ -63,10 +62,9 @@ body {
 
 #churchPic {
     width: 100%;
-    border-radius: 20px;
-    background-color: whitesmoke;
-    /* border: 2px solid rgb(0, 255, 242); */
-    box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75);
+    border-radius: 10px;
+    border: 2px solid rgb(255, 215, 156);
+    /* box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75); */
     margin-top: 4rem;
     margin-bottom: 4rem;
 }
@@ -86,8 +84,8 @@ body {
 #secMainBod{
     margin-bottom: 25rem;
     padding: 7rem;
-    border-bottom: 4px solid rgb(0, 225, 255);
-    background-color: rgba(255, 255, 255, 0.938);
+    border-bottom: 2px solid rgb(0, 255, 242);
+    background-color: rgba(255, 255, 255, 0.911);
     color: rgb(79, 130, 161);
     font-family: monospace;
     transform: skewY(3deg);
@@ -98,24 +96,15 @@ body {
 }
 
 #aboutUsCont {
-    background-color: rgba(180, 179, 179, 0.952);
-    box-shadow: 10px 10px 30px 10px rgb(125, 209, 248);
-    padding-right: 4rem;
-    padding-left: 4rem;
-    padding-bottom: 4rem;
+    background-color: rgba(165, 178, 190, 0.952);
+    padding-right: 3rem;
+    padding-left: 3rem;
+    padding-bottom: 3rem;
 }
 
-#staffCont {
-    background-color: rgba(255, 255, 255, 0.801);
-    border: 2px solid grey;
-    /* border-radius: 10px; */
-    padding: 4rem;
-    margin-bottom: 20rem;
-}
-
-.card {
-    box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75);
-    margin-bottom: 4rem;
+.parallax-container {
+    border-top: 1px solid rgb(1, 140, 158);
+    /* height: 1200px; */
 }
 
 .page-footer {
