--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
     margin-bottom: none;
     /* padding: 1rem; */
     border-top: 2px solid rgb(0, 225, 255);
-    /* border-bottom: 3px solid black; */
+    border-bottom: 4px solid rgb(0, 225, 255);
     background: linear-gradient(90deg, rgb(173, 229, 245) 20%, rgb(250, 207, 210) 80%);
     /* background-color: rgb(226, 225, 225); */
     transform: skewY(3deg);
@@ -65,7 +65,7 @@ body {
     width: 100%;
     border-radius: 20px;
     background-color: whitesmoke;
-    /* border: 2px solid rgb(0, 255, 242); */
+    border: 3px solid rgb(245, 193, 191);
     box-shadow: 10px 36px 32px 0px rgba(46, 46, 46, 0.75);
     margin-top: 4rem;
     margin-bottom: 4rem;
@@ -87,8 +87,8 @@ body {
     margin-bottom: 25rem;
     padding: 7rem;
     border-bottom: 4px solid rgb(0, 225, 255);
-    background-color: rgba(255, 255, 255, 0.938);
-    color: rgb(79, 130, 161);
+    background-color: rgba(245, 245, 245, 0.938);
+    color: rgb(36, 136, 167);
     font-family: monospace;
     transform: skewY(3deg);
 }
@@ -106,7 +106,7 @@ body {
 }
 
 #staffCont {
-    background-color: rgba(255, 255, 255, 0.801);
+    background-color: rgba(255, 255, 255, 0.705);
     border: 2px solid grey;
     /* border-radius: 10px; */
     padding: 4rem;
