--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     font-family: 'Poiret One', cursive;
     font-size: 7rem;
     color: white;
-    text-shadow: 1px 3px 0 #666666, 1px 13px 5px #666666;
+    text-shadow: 1px 3px 0 #474747, 1px 13px 5px #474747;
 }
 
 #headerContainer {
@@ -87,8 +87,8 @@ body {
     margin-bottom: 25rem;
     padding: 7rem;
     border-bottom: 4px solid rgb(0, 225, 255);
-    background-color: rgba(245, 245, 245, 0.938);
-    color: rgb(36, 136, 167);
+    background-color: rgba(139, 139, 139, 0.938);
+    color: white;
     font-family: monospace;
     transform: skewY(3deg);
 }
@@ -99,14 +99,14 @@ body {
 
 #aboutUsCont {
     background-color: rgba(180, 179, 179, 0.952);
-    box-shadow: 10px 10px 30px 10px rgb(125, 209, 248);
+    box-shadow: 10px 10px 30px 10px rgb(85, 195, 247);
     padding-right: 4rem;
     padding-left: 4rem;
     padding-bottom: 4rem;
 }
 
 #staffCont {
-    background-color: rgba(255, 255, 255, 0.705);
+    background-color: rgba(206, 206, 206, 0.664);
     border: 2px solid grey;
     /* border-radius: 10px; */
     padding: 4rem;
